cli/tests/default/e2e/snapshots/test_rule_validation/test_validation_of_invalid_rules/rulesinvalid-rulesinvalid-pattern-operator.yaml-core-only/results.txt
Configuration is invalid - found 2 configuration error(s), and 0 rule(s).
semgrep error: Invalid rule schema
  --> rules/invalid-rules/invalid-pattern-operator.yaml:4
4 |     foo: bar
  |     ^

Expected one of pattern,all,any,regex,taint,not,inside,anywhere to be present

[ERROR] Rule parse error in rule eqeq:
 Expected one of pattern,all,any,regex,taint,not,inside,anywhere to be present
